# ulterior_game

./: README.md  publish
bot/: Cargo.toml  links.md
docs/1591491735/roles/: 90a1a3236a9c37d7.md
docs/1591492053/roles/: f248ae0e02044d7e.md
docs/1591495750/roles/: 2e51c3c7319d5b3.md
docs/1591495814/roles/: 432c77a99df4d21a.md
docs/1591499543/roles/: 432c77a99df4d21a.md
docs/2020-06-06T18:59:04.910018900-06:00/roles/: e2ec55bb6296329b.md
docs/SystemTime { tv_sec: 1591489180, tv_nsec: 632120900 }/roles/: 90a1a3236a9c37d7.md
docs/annabelle/roles/: 2e51c3c7319d5b3.md
docs/asdfkj/roles/: e5f32291f16ad397.md
docs/testing-1/roles/: 15dd999ddddbed69.md
docs/testing-again/roles/: 90a1a3236a9c37d7.md
impl_p2p/: Cargo.toml
sim/: BUGS.md  Cargo.toml  NOTES.md
sim/src/: interactive.rs  lib.rs  main.rs
sim/src/actions/: attack.rs  attack.rs.bk
sim/src/gamestate/: active.rs  builder.rs  mod.rs  players.rs  power.rs  teams.rs  with_history.rs
sim/src/gh_pages/: mod.rs
