[package]
name = "ult"
edition = '2018'
version = "0.1.0"
authors = ["BatmanAoD"]

[dependencies]
colored = "1"
chrono = "*"
itertools = "*"
# TODO consider switching to `thiserror`
quick-error = "1"
rand = "*"
rand_derive = "*"
shrust = "*"

[lib]
name = "ultlib"
path = "src/lib.rs"

[[bin]]
name = "simulator"
path = "src/main.rs"
